change project list and fixed spacing in mobile version

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -119,12 +119,13 @@ main{
 .Project-Menu{
   font-size: 2rem;
   margin-left: 1rem;
+  height: 50%;
+  transition: height 2s ease-in;
+  
   li{  
     visibility: hidden;
-    height: 0;
-    transform: scale(0.8) ;
-    height: 0;
-    animation: slidedown 350ms ease-out both;
+    transform: scale(0.8);
+    animation: slideIn 350ms ease-out both;
     @for $i from 1 through 50 {
       &:nth-child(#{$i}) {
         margin-bottom: 0.5rem;
@@ -136,17 +137,23 @@ main{
   }
  
 }
-@keyframes slidedown{
+@keyframes slideIn{
   to{
   visibility: visible;
-  height: 100%;
   transform: scale(1) translateX(0);
   }
 }
-.Project-Menu.active{
-  transition: height 1s;
-  height: 100%;
-}
+// @keyframes slideDown {
+//   from{
+//     height: 0;
+//     transform: scaleY(0);
+//   }
+//   to{
+//     transform: scaleY(1);
+//     height: 100%;
+//     // transform: scaleY(0);
+//   }
+// }
 
 
 .project-title{
@@ -284,9 +291,8 @@ p{
   li{
     margin-right: 2rem;
     padding-bottom:3px;
-    border: 5px solid;
+    border: 2px solid;
     border-image-slice: 1;
-    border-width: 2px;
     border-image-source: linear-gradient(to left, #fff, #000);
     border-radius: 10px;
     border-right: 0;
@@ -299,9 +305,9 @@ p{
 }
 .gitRef{
   padding-bottom:3px;
-  border: 5px solid white;
+  margin-right: 2rem;
+  border: 2px solid white;
   border-image-slice: 1;
-  border-width: 2px;
   border-image-source: linear-gradient(to left, #fff, #000);
   border-right: 0;
   border-left: 0;
@@ -312,6 +318,22 @@ p{
 .gitRef:hover{
   border-image-source: none;
   transform: scale(1.3);
+}
+.siteRef{
+  padding-bottom:3px;
+  border: 2px solid black;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #fff, #000);
+  border-right: 0;
+  border-left: 0;
+  border-top:0;
+  display: flex;
+  align-items: center;
+}
+.siteRef:hover{
+  border-image-source: none;
+  transform: scale(1.3);
+  border-bottom: 3px groove #fff;
 }
 footer{
   position: absolute;
@@ -353,6 +375,7 @@ footer{
   }
   .project-List{
     flex-wrap: wrap;
+    gap: 12px;
   }
   .contact{
     padding-left: 2rem;
